Add box-model CSS properties and 3 HTML div's to illustrate.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
   <div class="my-class">
     <p>Here is some text.</p>
   </div>
+  <div class="box1">
+    <p>I'm box #1.</p>
+  </div>
+  <div class="box2">
+    <p>I'm box #2.</p>
+  </div>
+  <div class="box3">
+    <p>I'm box #3.</p>
+  </div>
 </body>
 </html>
