Add picture; center it and first div after it.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <title>Boxes</title>
 </head>
 <body>
+  <img src="img/cat.jpg" class="centered-image">
+  <span class="my-class">Hi there!</span>
   <div class="my-class">
-    <p>Here is some text.</p>
+    <p>Here is some text. The three boxes below are intentionally not centered for my learning purposes, to demonstrate having 'display: block;' and 'margin: auto;' in this and the HTML elements above.</p>
   </div>
   <div class="box1">
     <p>I'm box #1.</p>
